[tool.poetry]
name = "python-env-test"
version = "0.1.0"
description = ""
authors = ["you <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.49.0"
requests = "^2.32"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
mypy = "^1.11"
pytest = "^8.3"
pytest-cov = "^5.0"
pre-commit = "^3.7"
types-requests = "^2.32"

# --- Ruff（コード整形/静的チェック）
[tool.ruff]
line-length = 118
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP","C90","B"]
extend-select = ["PL","RUF100"]
ignore = ["D"]  # docstring ルールは一旦無効

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

# --- mypy（型チェック）
[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true