[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.49.1"  
watchdog = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"           
mypy = "^1.10"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"
types-requests = "^2.32.0.20240801"

[tool.ruff]
line-length = 118
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP","C90","B","SIM","PL","RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true

[project]
name = "python_env_test"
version = "0.1.0"
description = "Monaka-dev env: Streamlit + Ruff + mypy + Poetry"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
# 依存と Python バージョンは tool.poetry 側を使い続ける前提で、PEP 621 側は動的扱いにして警告を抑止
dynamic = ["dependencies", "requires-python"]